# zakassomsarobotics

./: .env.example  .gitignore  README.md  TRAINING_GUIDE.md  analyzer.py  config.py  detector.py  image_utils.py  local_vision.py  main.py  navigator.py  pyproject.toml  requirements.txt  schemas.py  speaker.py  test_direct.py  test_webcam.py  tts.py  webcam_debug.py
.github/workflows/: ci.yml
backend/: analyzer.py  image_utils.py  local_vision.py  main.py  tts.py
firmware/platformio_esp32_camera_client/src/: camera_pins.h  main.cpp  wifi_config.example.h  wifi_config.h
rafachmo/: .env.example  .gitignore  image_utils.py  main.py
rafachmo/firmware/platformio_esp32_camera_client/: platformio.ini
rafachmo/scripts/: export_model.py  train_home_office.py
scripts/: autolabel_officedata.py  collect_frames.py  export_model.py  list_elevenlabs_voices.py  speak_output.py  train_home_office.py
tests_and_clients/: test_direct.py  test_image_base64.txt  test_vision.py  test_webcam.py
training/: README.md  home_office_dataset.yaml
zakaz-glasses/: platformio.ini
zakaz-glasses/src/: main.cpp
