[project]
name = "zakassomsarobotics"
version = "0.1.0"
description = "Smart glasses blind assistance system"
authors = [{name = "Jaloliddin Ismailov ", email = "unnobatroo@yandex.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "elevenlabs",
    "python-dotenv",
    "pillow",
    "requests",
    "opencv-python",
    "numpy",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "models", "tests_and_clients"]
